@@ -1,0 +1,3 @@
+<div class="ui-body ui-body-d">
+    [[+text]]
+</div>
